Sorting out blog pics, fixing broken links

--- a/_posts/2015-10-15-editor-off-2.md
+++ b/_posts/2015-10-15-editor-off-2.md
@@ -3,7 +3,7 @@ layout     : post
 title      : "The Editor Off Episode II: The Revenge of Atom"
 categories : website vim atom emacs
 tags       : blog
-author     : Vince, Alex, Sam, Adam, Hannah, Geraint
+author     : Vince, Alex, Sam, Adam, Geraint
 comments   : true
 ---
 
@@ -67,7 +67,7 @@ In atom you can simply press `ctrl+shift+M` and it automatically opens a preview
 pane that updates as you type. Here's a screenshot (showing me write the current
 blog post using Adam's cool new theme):
 
-![markdown-preview]({{site.baseurl}}/img/markdown-preview.png)
+![markdown-preview](/res/blog_pics/markdown-preview.png)
 
 This is a nice example of some of the built in capabilities of atom.
 
@@ -83,7 +83,7 @@ For this trick Vince showed how you could select multiple lines and then have
 multiple cursors which helped him fix some docstrings quickly. Here's a
 screenshot:
 
-![multiple-cursors]({{site.baseurl}}/img/atom-multiple-cursors.png)
+![multiple-cursors](/res/blog_pics/atom-multiple-cursors.png)
 
 I also shared various other little tricks, such as typing `ctrl+F2` to set a
 bookmark and then using `F2` to cycle between bookmarks to move back and forth
