Fixing broken links

--- a/_posts/2015-10-15-editor-off-2.md
+++ b/_posts/2015-10-15-editor-off-2.md
@@ -1,7 +1,7 @@
 ---
 layout     : post
 title      : "The Editor Off Episode II: The Revenge of Atom"
-categories : website vim atom emacs
+categories : news
 tags       : blog
 author     : Vince, Alex, Sam, Adam, Geraint
 comments   : true
