Adding Code and Go blog ep. II post and changing categories. :imp:

--- a/_posts/2015-10-15-editor-off-2.md
+++ b/_posts/2015-10-15-editor-off-2.md
@@ -1,7 +1,7 @@
 ---
 layout     : post
 title      : "The Editor Off Episode II: The Revenge of Atom"
-categories : news
+categories : events
 tags       : blog
 author     : Vince, Alex, Sam, Adam, Geraint
 comments   : true
